# obelisk

./: .gitignore  .gitmodules  go.work  go.work.example  go.work.sum  readme.md  setup.sh
.github/workflows/: audit.yml  build.yml
infra/: database.sql  generate_thrift.sh  go.mod  go.sum  infra.go  infra.thrift  readme.md  result.json
infra/binserver/: binserver.go  binserverapp.go  config.go  database.go  readme.md
infra/common/: httpserver.go  signals.go
infra/genjs/: JobCzar.js  WorkerService.js  infra_types.js
infra/go_thrift_client/: go_client.go
infra/jobboard/: addjob.html  board.css  board.js  config.js  jobboard.html  readme.md  sql.html  thrift.js  upload.html  upload.js
infra/jobczar/: config.go  (+6 more)
models/: Makefile  README.md  go.mod  go.sum
run/: build.bat  egan_proto.sh  fworld_proto.sh  infra.bat  jobczar.cfg  run.py  worker.cfg
worlds/: Makefile  README.md  go.mod  go.sum  setup.py  shmem_agent.go  thrift_agent_server.go  version.go  world.tsv
worlds/network/: CMakeLists.txt  env.thrift  generate_thrift.sh  network.go  notes.txt  shmem_client.py  thrift_agent_client.py  thrift_agent_server.py
worlds/network/cpp/: thrift_agent_client.cpp  thrift_agent_client.h
worlds/network/gencpp/: Agent.cpp  Agent.h  Agent_server.skeleton.cpp  env_types.cpp  env_types.h
worlds/network/gengo/env/: GoUnusedProtection__.go  env-consts.go  env.go
worlds/network/gengo/env/agent-remote/: agent-remote.go
worlds/network/genpy/env/: Agent-remote  Agent.py  ttypes.py
worlds/network/sharedmem/: Makefile  reader.cpp  shmutil.cpp  shmutil.h  writer.cpp
(+149 files in other folders)
